<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center|top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="guskuma.com.meuportfolio.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:text="@string/myNanodegreeApps" />

    <Button
        android:id="@+id/btnFilmesPopulares"
        android:text="@string/appFilmesPopulares"
        android:tag="@string/tagFilmesPopulares"
        android:onClick="onButtonClick"
        style="@style/defaultButton" />

    <Button
        android:id="@+id/btnStockHawk"
        android:text="@string/appStockHawk"
        android:tag="@string/tagStockHawk"
        android:onClick="onButtonClick"
        style="@style/defaultButton" />

    <Button
        android:id="@+id/btnFacaMaior"
        android:text="@string/appFacaMaior"
        android:tag="@string/tagFacaMaior"
        android:onClick="onButtonClick"
        style="@style/defaultButton" />

    <Button
        android:id="@+id/btnFacaMaterial"
        android:text="@string/appFacaMaterial"
        android:tag="@string/tagFacaMaterial"
        android:onClick="onButtonClick"
        style="@style/defaultButton" />

    <Button
        android:id="@+id/btnSejaOnipresente"
        android:text="@string/appSejaOnipresente"
        android:tag="@string/tagSejaOnipresente"
        android:onClick="onButtonClick"
        style="@style/defaultButton" />

    <Button
        android:id="@+id/btnCapstone"
        android:text="@string/appCapstone"
        android:tag="@string/tagCapstone"
        android:onClick="onButtonClick"
        style="@style/defaultButton" />
</LinearLayout>
